--- a/TriforceApp/res/layout/row_layout.xml
+++ b/TriforceApp/res/layout/row_layout.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#FFDD73"
     android:clickable="true" >
 
     <!-- Displays the checkbox for the Task -->
@@ -26,6 +27,7 @@
         android:maxLength="60"
         android:maxLines="3"
         android:text="@+id/label"
+        android:textColor="#3b2c00"
         android:textSize="18dp" />
 
 </RelativeLayout>
