edited how each row on task list looks and filtering by date is fixed where it originally did not factor in the year correctly when using MM-dd-yyyy. So it's not stored into the db as yyyy-MM-dd
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@260 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/user_tasklist.xml
+++ b/TriforceApp/res/layout/user_tasklist.xml
@@ -59,19 +59,13 @@
 
     <ListView
         android:id="@android:id/list"
-        android:layout_width="280dp"
-        android:layout_height="0dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="#FFDD73"
         android:clickable="true"
-        android:divider="#555555"
+        android:divider="#999999"
         android:dividerHeight="1dp"
         android:drawSelectorOnTop="false" >
     </ListView>
-
-    <Space
-        android:layout_width="match_parent"
-        android:layout_height="15dp" />
 
 </LinearLayout>
