--- a/TriforceApp/res/layout/row_layout.xml
+++ b/TriforceApp/res/layout/row_layout.xml
@@ -12,22 +12,57 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_marginLeft="13dp"
         android:focusable="false" >
     </CheckBox>
 
     <!-- Displays the Name of Task -->
 
     <TextView
-        android:id="@+id/label"
+        android:id="@+id/taskNameLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginRight="55dp"
+        android:layout_marginTop="5dp"
         android:layout_toRightOf="@+id/check"
-        android:maxLength="60"
-        android:maxLines="3"
-        android:text="@+id/label"
+        android:maxLines="1"
+        android:text="@+id/taskNameLabel"
+        android:textColor="#03436A"
+        android:textSize="14dp" />
+
+    <TextView
+        android:id="@+id/taskTypeLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/taskNameLabel"
+        android:layout_marginLeft="3dp"
+        android:layout_toRightOf="@+id/check"
+        android:text="@+id/taskTypeLabel"
         android:textColor="#3b2c00"
-        android:textSize="18dp" />
+        android:textSize="11dp" />
+
+    <TextView
+        android:id="@+id/dueTag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/taskNameLabel"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="13dp"
+        android:text="Due:"
+        android:textColor="#3b2c00"
+        android:textSize="11dp" />
+
+    <TextView
+        android:id="@+id/dueLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/dueTag"
+        android:layout_marginRight="13dp"
+        android:layout_marginTop="5dp"
+        android:text="@+id/dueLabel"
+        android:textColor="#3b2c00"
+        android:textSize="14dp" />
 
 </RelativeLayout>
