changed map icon
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@265 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/menu/menu_tasklist.xml
+++ b/TriforceApp/res/menu/menu_tasklist.xml
@@ -8,7 +8,7 @@
         android:title="@string/newTask"/>
     <item
         android:id="@+id/menuShowLocations"
-        android:icon="@drawable/globe"
+        android:icon="@android:drawable/ic_menu_mapmode"
         android:showAsAction="ifRoom"
         android:title="@string/showLocations"/>
     <item
