changed edit text font size smaller
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@268 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/edit_task_page.xml
+++ b/TriforceApp/res/layout/edit_task_page.xml
@@ -68,7 +68,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
-                android:inputType="textMultiLine" >
+                android:inputType="textMultiLine"
+                android:textAppearance="?android:attr/textAppearanceSmall" >
             </EditText>
         </TableRow>
         <!-- Tag for Task Description and its edit form -->
@@ -99,7 +100,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
-                android:inputType="textMultiLine" />
+                android:inputType="textMultiLine"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
         </TableRow>
 
         <!-- Prompt for selecting the type of the task -->
@@ -195,7 +197,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
-                android:inputType="textPostalAddress" />
+                android:inputType="textPostalAddress"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
         </TableRow>
 
         <TableRow
