fixed a bolding issue in register xml edittext fields
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@270 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/register.xml
+++ b/TriforceApp/res/layout/register.xml
@@ -117,8 +117,7 @@
             android:layout_height="wrap_content"
             android:text="@string/name"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="#03436A"
-            android:textStyle="bold" />
+            android:textColor="#03436A" />
 
         <ImageView
             android:id="@+id/nameError"
@@ -152,8 +151,7 @@
             android:layout_height="wrap_content"
             android:text="@string/email"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="#03436A"
-            android:textStyle="bold" />
+            android:textColor="#03436A" />
 
         <ImageView
             android:id="@+id/emailError"
