--- a/TriforceApp/res/layout/new_task_page.xml
+++ b/TriforceApp/res/layout/new_task_page.xml
@@ -32,7 +32,29 @@
         </TableRow>
 
         <View
-            android:id="@+id/divider"
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@drawable/solid_dark_blue" />
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="#245A7A" >
+
+            <TextView
+                android:id="@+id/newTaskBanner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:paddingLeft="20dp"
+                android:paddingTop="2dp"
+                android:text="Task Name is required"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textColor="#FFFFFF" />
+        </TableRow>
+
+        <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="@drawable/black_yellow_gradient" />
@@ -55,6 +77,12 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:textColor="#03436A"
                 android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/taskNameErrorNT"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:src="@android:drawable/ic_delete" />
         </TableRow>
 
         <TableRow
