--- a/TriforceApp/res/layout/edit_task_page.xml
+++ b/TriforceApp/res/layout/edit_task_page.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFDD73" >
+    android:layout_height="match_parent" >
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -240,14 +239,13 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/cancel" />
-            
+
             <Button
                 android:id="@+id/saveButtonET"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/save" />
-
         </TableRow>
     </LinearLayout>
 
