add and edited buttons removed from menu onto title bar
git-svn-id: https://team-triforce-36-project.googlecode.com/svn/trunk@301 4b79e4dc-a6ce-1459-8c0c-0c5eed390bd5

--- a/TriforceApp/res/layout/view_task_page.xml
+++ b/TriforceApp/res/layout/view_task_page.xml
@@ -12,7 +12,7 @@
 
         <TextView
             android:id="@+id/headerVT"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:paddingLeft="20dp"
@@ -20,6 +20,14 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textStyle="bold"
             android:typeface="serif" />
+
+        <ImageButton
+            android:id="@+id/editTaskBtn"
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="110dp"
+            android:layout_marginTop="4dp"
+            android:src="@android:drawable/ic_menu_edit" />
     </TableRow>
 
     <View
