--- a/TriforceApp/res/layout/user_tasklist.xml
+++ b/TriforceApp/res/layout/user_tasklist.xml
@@ -17,7 +17,7 @@
 
         <TextView
             android:id="@+id/titleTaskList"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:paddingLeft="20dp"
@@ -25,6 +25,14 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:textStyle="bold"
             android:typeface="serif" />
+
+        <ImageButton
+            android:id="@+id/addNewTask"
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="5dp"
+            android:src="@android:drawable/ic_menu_add" />
     </TableRow>
 
     <View
